--- a/QOBDManagement/QOBD/App.config
+++ b/QOBDManagement/QOBD/App.config
@@ -23,13 +23,13 @@
         </bindings>
         <client>
           
-            <endpoint address="http://localhost/WebServiceSOAP/server.php"
+            <!--<endpoint address="http://localhost/WebServiceSOAP/server.php"
                       binding="basicHttpBinding" bindingConfiguration="QOBDWebServiceBinding"
-                      contract="QOBDServiceReference.QOBDWebServicePortType" name="QOBDWebServicePort" />
-
-            <!--<endpoint address="http://bahilo-001-site2.ftempurl.com/webservice/server.php"
+                      contract="QOBDServiceReference.QOBDWebServicePortType" name="QOBDWebServicePort" />-->
+            
+            <endpoint address="http://bahilo-001-site2.ftempurl.com/webservice/server.php"
                 binding="basicHttpBinding" bindingConfiguration="QOBDWebServiceBinding"
-                contract="QOBDServiceReference.QOBDWebServicePortType" name="QOBDWebServicePort" />-->
+                contract="QOBDServiceReference.QOBDWebServicePortType" name="QOBDWebServicePort" />
         </client>
     </system.serviceModel>
     <appSettings>
@@ -86,12 +86,12 @@
       <add key="progress_step" value="7"/>
 
       <!-- Web service localhost 192.168.0.12-->
-      <add key="remote_host" value="http://localhost/WebServiceSOAP/index.php?"/>
-      <!--<add key="remote_host" value="http://bahilo-001-site2.ftempurl.com/webservice/index.php?"/>-->
-      <add key="remote_doc_lib_folder" value="webservice-Lib"/>
-      <add key="remote_doc_lib_pdf_folder" value="webservice-Lib-fpdf-bin"/>
+      <!--<add key="remote_host" value="http://localhost/WebServiceSOAP/index.php?"/>-->
+      <add key="remote_host" value="http://bahilo-001-site2.ftempurl.com/webservice/index.php?"/>
+      <add key="remote_doc_lib_folder" value="Lib"/>
+      <add key="remote_doc_lib_pdf_folder" value="Lib-fpdf-bin"/>
 
-      <!-- Ftp localhost 192.168.0.12:14147-->
+      <!-- Ftp localhost 192.168.0.254:14147-->
       <add key="ftp" value="ftp://ftp.smarterasp.net/"/>
       <add key="ftp_image_folder" value="QOBD/webservice/Images/"/>
       <add key="ftp_profile_image_folder" value="QOBD/webservice/Images/profile/"/>
