--- a/QOBDManagement/QOBDGateway/app.config
+++ b/QOBDManagement/QOBDGateway/app.config
@@ -7,7 +7,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost/WebServiceSOAP/server.php"
+            <endpoint address="http://bahilo-001-site2.ftempurl.com/webservice/server.php"
                 binding="basicHttpBinding" bindingConfiguration="QOBDWebServiceBinding"
                 contract="QOBDServiceReference.QOBDWebServicePortType" name="QOBDWebServicePort" />
         </client>
